# zhlint

./: .eslintrc.json  .gitignore  .prettierignore  404.html  Cargo.toml  LICENSE  LICENSE.txt  README.md  README.zh-CN.md  api-extractor.json  contribute.html  crowdin.yml  deploy.sh  design.html  hashmap.json  index.html  package.json  playground.html  pnpm-lock.yaml  tsconfig-build.json  tsconfig.json  vite.config.ts  webpack.config.js
.vuepress/: config.js  enhanceApp.js
assets/: app.B0hKuXrz.js  contribute.md.DQzlTRKY.js  contribute.md.DQzlTRKY.lean.js  design.md.BtqnW2Aj.js  design.md.BtqnW2Aj.lean.js  index.md.B1X-tjtB.js  index.md.B1X-tjtB.lean.js  playground.md.C6bqC3Qa.js  playground.md.Di-xngtp.js  style.CVuDSaTu.css
docs/: 404.html  CNAME  PlaygroundCore.vue  contribute.md  design.md  index.html  index.md  playground.md  terms.md  zhlint.es.js  zhlint.es.js.map
docs-legacy/: 404.html  index.html
examples/: foo.txt
scripts/: gen-readme.mjs
src/: char_type.rs  check-char-type.js  check-char-type.ts  find-ignored-marks.js  find-ignored-marks.ts  general_type.rs  generator.rs  ignore.ts  index.js  index.ts  join.js  join.ts  learn_borrow.rs  lib.rs  lint.rs  logger.js  logger.ts  main.rs  node.ts  options.ts  parse.js  parse.rs  parse.ts  parse_context.rs  parse_status.rs  parse_util.rs  process-rule.ts  replace-block.js  replace-block.ts  report.rs  report.ts  run.js  run.ts  token_type.rs  travel.ts  traverse.rs  type_trait.rs
test/: basic.test.js  basic.test.ts  debug.test.ts  example-article.md  example-disabled.md  example-ignore.md  hexo.test.js  (+20 more)
(+159 files in other folders)
