[package]
name = "zhlint"
version = "0.0.2"
authors = ["Zhao Jinjiang <zhaojinjiang@me.com>"]
edition = "2021"
description = "A linting tool for Chinese text content."
readme = "README.md"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
unicode-width = "0.1.12"
lazy_static = "1.5.0"
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.9.3"

[lib]
name = "zhlint"
path = "src/lib.rs"

[[bin]]
name = "zhlint"
path = "src/bin.rs"
